# api/openapi/types.gen.go
@@ -3,11 +3,6 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.9.1 DO NOT EDIT.
 package Openapi
 
-const (
-	Api_keyScopes    = "api_key.Scopes"
-	Users_authScopes = "users_auth.Scopes"
-)
-
 // Tweet defines model for Tweet.
 type Tweet struct {
 	Id     int64   `json:"id"`
